# Vocals-To-Musical-Note-Conversion

./: .replit  app.py  pianogrid.jsx  pianorollgrid.css  requirements.txt  script.js  style.css  utils.py  visualizer.py
Vocals Project/: App.jsx  audio_processor.py  auth.py  config.py  index.html  models.py  pianoRollGrid.jsx  pyproject.toml
Vocals Project/attached_assets/: Pasted--div-class-key-data-note-C4-span-class-note-label-C4-span-div-1740398004743.txt  Pasted-Error-processing-audio-Invalid-property-specified-for-object-of-type-plotly-graph-objs-heatmap-Colo-1740375432367.txt
Vocals Project/instance/: users.db
Vocals Project/templates/: dashboard.html  login.html  password_management.html  phone_verification.html  signup.html
